--- a/templates/result.html
+++ b/templates/result.html
@@ -101,6 +101,10 @@
             color: #d1d1d4;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
+        .message{
+            font-size: 20px;
+            font-style: italic;
+        }
 
     </style>
 
