--- a/templates/result.html
+++ b/templates/result.html
@@ -43,6 +43,7 @@
             background-image: url("./static/img/444.jpg");
             background-repeat: no-repeat;
             background-size: cover;
+	    height: 70px;
         }
         .logo_image{
             /*display: inline-block;*/
@@ -50,19 +51,20 @@
             
         }
         .logo_title{
-            display: inline;
+            display: inline-block;
             text-align: left;
             vertical-align: bottom;
             width:90%;
             ;
         }
         .header2{
-            display: inline;
+            display: table-cell;
             font-size: 35px;
             color: #000000;
             font-weight: bolder;
-            padding-left: 123px;
+            padding-left: 10px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	    vertical-align: bottom;
         }
         .footer{
             position: relative;
