--- a/templates/result.html
+++ b/templates/result.html
@@ -51,7 +51,7 @@
             
         }
         .logo_title{
-            display: inline-block;
+            display: inline;
             text-align: left;
             vertical-align: bottom;
             width:90%;
@@ -65,6 +65,7 @@
             padding-left: 10px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	    vertical-align: bottom;
+	    height: 70px;
         }
         .footer{
             position: relative;
