--- a/templates/result.html
+++ b/templates/result.html
@@ -176,7 +176,7 @@
        
         <div class="logo_image">
             <a href="/" class="" data-image-width="430" data-image-height="117">
-                <img src="{{ url_for('static', filename='img/index.png') }}" class="logo">
+                <img src="{{ url_for('static', filename='img/index2.png') }}" class="logo">
             </a>
         </div>
         <div>
