--- a/templates/result.html
+++ b/templates/result.html
@@ -43,7 +43,7 @@
             background-image: url("./static/img/444.jpg");
             background-repeat: no-repeat;
             background-size: cover;
-	    height: 70px;
+	        height: 70px;
         }
         .logo_image{
             /*display: inline-block;*/
@@ -55,7 +55,7 @@
             text-align: left;
             vertical-align: bottom;
             width:90%;
-            ;
+            
         }
         .header2{
             display: table-cell;
@@ -64,8 +64,8 @@
             font-weight: bolder;
             padding-left: 10px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	    vertical-align: bottom;
-	    height: 70px;
+	        vertical-align: bottom;
+	        height: 70px;
         }
         .footer{
             position: relative;
@@ -185,7 +185,7 @@
         <div>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#contact">Model Retrain</a></li>
+                <li><a href="/start_train">Model Retrain</a></li>
                 <li><a href="#contact">Single Prediction</a></li>
                 <li><a href="#news">Bulk Prediction</a></li>
                 <li><a class="active" href="#home">Home</a></li>
